--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 homepage = "https://github.com/otherlayer/nostr-rs-ext/"
 repository = "https://github.com/otherlayer/nostr-rs-ext/"
 license = "MIT"
-keywords = ["nostr", "nostr-rs", "relay", "extension", "plugins"]
+keywords = ["nostr", "nostr-rs", "relay", "extension", "plugin"]
 
 [dependencies]
 tracing = "0.1.36"
