--- a/config.toml
+++ b/config.toml
@@ -13,4 +13,5 @@ folder = "plugins"
 #              | - verify
 #              | - etc.
 # names = [ "spam", "verify" ]
+# will look in every folder for library file libplugin.so
 names = [ "welcome" ]
